--- a/src/app/view-reciepe/view-reciepe.component.html
+++ b/src/app/view-reciepe/view-reciepe.component.html
@@ -46,8 +46,8 @@
         </div>
         <div class="d-flex flex-column align-items-center">
           <img
-            width="100px"
-            src="https://eastmanscorner.com/wp-content/uploads/2015/01/cooking-icon.png"
+            width="70px"
+            src="https://cdn2.iconfinder.com/data/icons/cooking-57/64/06-stew-boiling-fire-hot-pot-cook-cooking-food-512.png"
             alt="Cooking Time"
             class="mb-3"
           />
@@ -58,7 +58,7 @@
         </div>
         <div class="d-flex flex-column align-items-center">
           <img
-            width="80px"
+            width="70px"
             src="https://cdn1.iconfinder.com/data/icons/fitness-sport/512/calories-512.png"
             alt="Calories"
             class="mb-3"
