--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,10 +61,21 @@
     <h1 class="fw-bolder text-center">Client Testimonials</h1>
     <marquee behavior="scroll" direction="left" scrollamount="5" class="d-flex my-5">
       @for (item of allapprovedFeedback; track $index) {
-      <div class="border p-4 mx-2 shadow bg-light text-dark" style="min-width: 300px;">
-        <h5 class="fw-bold">{{ item.name }}</h5>
-        <p class="fs-6 text-muted">{{ item.message }}</p>
-      </div>
+        <div class="border p-4 mx-2 shadow-lg text-center bg-white text-dark rounded" style="min-width: 320px; max-width: 350px;">
+          <h5 class="fw-bold">{{ item.name }}</h5>
+          
+          <!-- Star Rating -->
+          <div class="text-warning mb-2">
+            
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+
+          </div>
+  
+          <p class="fs-6 text-muted">{{ item.message }}</p>
+        </div>
       }
     </marquee>
   </div>
