--- a/src/app/view-reciepe/view-reciepe.component.html
+++ b/src/app/view-reciepe/view-reciepe.component.html
@@ -7,6 +7,7 @@
         <i class="fas fa-arrow-left me-2"></i>Back to Recipes List
       </a>
       <img
+      style="height: 450px; width: 550px; object-fit: cover;"
         class="img-fluid my-5 rounded shadow"
         [src]="recipe.image"
         alt="{{ recipe.name }}"
